# u3-cht

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTEXT.md  PLAN.md  README.md
.claude/skills/classic-mac-c-game-sdl-port/: SKILL.md
.github/workflows/: build-mac.yml
assets/: MainResources.rsrc
assets/strings/en/: Intersex.u3s  Pub.u3s  Radrion.u3s  Spells.u3s  Talk.u3s  TilesPlural.u3s  TilesVoices.u3s
assets/strings/zh-Hant/: Classes.u3s  Female.u3s  Male.u3s  Messages.u3s  MoreMessages.u3s  Pub.u3s  Races.u3s  Radrion.u3s  Talk.u3s  Tiles.u3s  TilesPlural.u3s  WeaponsArmour.u3s
docker/: Dockerfile
docs/: GAMEPLAY-STATUS.md  P2-MacIF-移植盤點.md  P3-compat-compile-status.md  README.md  characters-and-factions.md  gameplay-guide.md  localization-notes.md  release-history.md  taiwan-history.md  timeline.md  ultima-iii-overview.md  versions-and-platforms.md  單色模式評估.md
docs/adr/: 0001-quickdraw-sdl-shim.md
patches/: 0001-utf8-bottom-text.patch  0002-test-hooks.patch  0003-button-labels.patch  0004-ztats-buttons.patch  0005-classrace-display.patch  0006-classrace-codes.patch  0007-minor-remnants.patch  0008-skipintro-and-sidebar-main.patch  0009-sidebar-classrace-codes-new.patch
src/compat/: cf_bridge.c  mac_shim.h  mac_types.h  qd_draw.c  qd_geometry.c  qd_geometry.h  qd_port.c  qd_text.c  qd_text.h  quickdraw.h  weaken_upstream_text.h
src/compat/fakeinc/Carbon/: Carbon.h
src/compat/fakeinc/QuickTime/: QuickTime.h
src/platform_sdl/: main.c  plat.h  plat_cf.c  plat_event.c  plat_globals.c  plat_image.c  plat_memory.c  plat_resource.c  plat_sound.c  plat_toolbox.c  plat_ui.c
src/poc/: main.c
src/text/: strings.c  strings.h
tests/: compat_test_stubs.c  hello_sdl.c  test_geometry.c  test_qd_blit.c  test_qd_text.c  test_strings_render.c
tests/scripts/: click_journey.txt  click_opt.txt  cmd_test.txt  colormode.txt  create_char.txt  dungeon.txt  enter.txt  enter_castle.txt  help_overlay.txt  jkey.txt  journey.txt  menu_only.txt  options_mouse.txt  options_speed.txt  options_speed2.txt  options_test.txt  organize_btns.txt  organize_view.txt  party.txt  play.txt  sail_test.txt  skip.txt  smoke.txt  speak_test.txt  tileset.txt  tomenu.txt  view.txt
tools/: asan_run.sh  build_and_verify.sh  build_game.sh  build_talk.py  compile_probe.sh  extract_rsrc.py  extract_strings.py  extract_talk.py  game_tester.sh  link_probe.sh  make_raceclass_gif.py  package_appimage.sh  package_macos.sh  package_windows.sh  qtma2midi.py  render_music.sh  run_tests.sh  smoke_appimage.sh
translations/: Classes.json  Female.json  Intersex.json  Male.json  Messages.json  MoreMessages.json  Pub.json  Races.json  Radrion.json  Spells.json  Talk.json  Tiles.json  TilesPlural.json  TilesVoices.json  WeaponsArmour.json
